parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> block colons body
Rule 3     block -> <empty>
Rule 4     block -> vars
Rule 5     vars -> <empty>
Rule 6     vars -> VAR vars variables colons types colons
Rule 7     types -> <empty>
Rule 8     types -> INTEGER_TYPE
Rule 9     types -> FLOAT_TYPE
Rule 10    colons -> <empty>
Rule 11    colons -> COLON
Rule 12    colons -> SEMI_COLON
Rule 13    variables -> <empty>
Rule 14    variables -> VARIABLE
Rule 15    variables -> VARIABLE COMMA variables
Rule 16    variables -> OPEN_PAREN variables CLOSE_PAREN
Rule 17    body -> <empty>
Rule 18    body -> BEGIN body lines colons END
Rule 19    body -> lines colons
Rule 20    lines -> <empty>
Rule 21    lines -> function
Rule 22    lines -> cycle
Rule 23    lines -> assign
Rule 24    lines -> expression
Rule 25    lines -> print
Rule 26    lines -> if
Rule 27    lines -> call
Rule 28    assign -> variables EQUAL expression
Rule 29    call -> CALL NAME_FUNCTION variables
Rule 30    function -> <empty>
Rule 31    function -> FUNCTION NAME_FUNCTION variables body
Rule 32    cycle -> <empty>
Rule 33    cycle -> CYCLE condition body
Rule 34    if -> IF condition body else body
Rule 35    else -> <empty>
Rule 36    else -> ELSE
Rule 37    condition -> expression comparison expression
Rule 38    condition -> OPEN_PAREN condition CLOSE_PAREN logic_op
Rule 39    logic_op -> AND
Rule 40    logic_op -> OR
Rule 41    logic_op -> NEGATION
Rule 42    comparison -> MORE
Rule 43    comparison -> LESS
Rule 44    comparison -> LOGIC_EQUAL
Rule 45    print -> PRINT expression
Rule 46    expression -> <empty>
Rule 47    expression -> term SUM term
Rule 48    expression -> term MINUS term
Rule 49    expression -> CONTINUE
Rule 50    expression -> BREAK
Rule 51    term -> <empty>
Rule 52    term -> factor MULTIPLY factor
Rule 53    term -> factor DIVISION factor
Rule 54    factor -> <empty>
Rule 55    factor -> VARIABLE
Rule 56    factor -> FLOAT_DIGIT
Rule 57    factor -> INT_DIGIT
Rule 58    factor -> OPEN_PAREN expression CLOSE_PAREN

Terminals, with rules where they appear

AND                  : 39
BEGIN                : 18
BREAK                : 50
CALL                 : 29
CLOSE_PAREN          : 16 38 58
COLON                : 11
COMMA                : 15
CONTINUE             : 49
CYCLE                : 33
DIVISION             : 53
ELSE                 : 36
END                  : 18
EQUAL                : 28
FLOAT_DIGIT          : 56
FLOAT_TYPE           : 9
FUNCTION             : 31
IF                   : 34
INTEGER_TYPE         : 8
INT_DIGIT            : 57
LESS                 : 43
LOGIC_EQUAL          : 44
MINUS                : 48
MORE                 : 42
MULTIPLY             : 52
NAME_FUNCTION        : 29 31
NEGATION             : 41
OPEN_PAREN           : 16 38 58
OR                   : 40
PRINT                : 45
SEMI_COLON           : 12
SUM                  : 47
VAR                  : 6
VARIABLE             : 14 15 55
error                : 

Nonterminals, with rules where they appear

assign               : 23
block                : 2
body                 : 2 18 31 33 34 34
call                 : 27
colons               : 2 6 6 18 19
comparison           : 37
condition            : 33 34 38
cycle                : 22
else                 : 34
expression           : 24 28 37 37 45 58
factor               : 52 52 53 53
function             : 21
if                   : 26
lines                : 18 19
logic_op             : 38
print                : 25
program              : 0
term                 : 47 47 48 48
types                : 6
variables            : 6 15 16 28 29 31
vars                 : 4 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . block colons body
    (3) block -> .
    (4) block -> . vars
    (5) vars -> .
    (6) vars -> . VAR vars variables colons types colons

  ! reduce/reduce conflict for $end resolved using rule 1 (program -> .)
  ! reduce/reduce conflict for COLON resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for BEGIN resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for CYCLE resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for CONTINUE resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for BREAK resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for PRINT resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for IF resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for CALL resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for OPEN_PAREN resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for FLOAT_DIGIT resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for INT_DIGIT resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for EQUAL resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for SUM resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for DIVISION resolved using rule 3 (block -> .)
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> .)
    $end            reduce using rule 1 (program -> .)
    COLON           reduce using rule 3 (block -> .)
    SEMI_COLON      reduce using rule 3 (block -> .)
    BEGIN           reduce using rule 3 (block -> .)
    FUNCTION        reduce using rule 3 (block -> .)
    CYCLE           reduce using rule 3 (block -> .)
    CONTINUE        reduce using rule 3 (block -> .)
    BREAK           reduce using rule 3 (block -> .)
    PRINT           reduce using rule 3 (block -> .)
    IF              reduce using rule 3 (block -> .)
    CALL            reduce using rule 3 (block -> .)
    VARIABLE        reduce using rule 3 (block -> .)
    OPEN_PAREN      reduce using rule 3 (block -> .)
    FLOAT_DIGIT     reduce using rule 3 (block -> .)
    INT_DIGIT       reduce using rule 3 (block -> .)
    EQUAL           reduce using rule 3 (block -> .)
    SUM             reduce using rule 3 (block -> .)
    MINUS           reduce using rule 3 (block -> .)
    MULTIPLY        reduce using rule 3 (block -> .)
    DIVISION        reduce using rule 3 (block -> .)
    VAR             shift and go to state 4

  ! $end            [ reduce using rule 3 (block -> .) ]
  ! COLON           [ reduce using rule 5 (vars -> .) ]
  ! SEMI_COLON      [ reduce using rule 5 (vars -> .) ]
  ! BEGIN           [ reduce using rule 5 (vars -> .) ]
  ! FUNCTION        [ reduce using rule 5 (vars -> .) ]
  ! CYCLE           [ reduce using rule 5 (vars -> .) ]
  ! CONTINUE        [ reduce using rule 5 (vars -> .) ]
  ! BREAK           [ reduce using rule 5 (vars -> .) ]
  ! PRINT           [ reduce using rule 5 (vars -> .) ]
  ! IF              [ reduce using rule 5 (vars -> .) ]
  ! CALL            [ reduce using rule 5 (vars -> .) ]
  ! VARIABLE        [ reduce using rule 5 (vars -> .) ]
  ! OPEN_PAREN      [ reduce using rule 5 (vars -> .) ]
  ! FLOAT_DIGIT     [ reduce using rule 5 (vars -> .) ]
  ! INT_DIGIT       [ reduce using rule 5 (vars -> .) ]
  ! EQUAL           [ reduce using rule 5 (vars -> .) ]
  ! SUM             [ reduce using rule 5 (vars -> .) ]
  ! MINUS           [ reduce using rule 5 (vars -> .) ]
  ! MULTIPLY        [ reduce using rule 5 (vars -> .) ]
  ! DIVISION        [ reduce using rule 5 (vars -> .) ]
  ! $end            [ reduce using rule 5 (vars -> .) ]

    program                        shift and go to state 1
    block                          shift and go to state 2
    vars                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (2) program -> block . colons body
    (10) colons -> .
    (11) colons -> . COLON
    (12) colons -> . SEMI_COLON

  ! shift/reduce conflict for COLON resolved as shift
  ! shift/reduce conflict for SEMI_COLON resolved as shift
    BEGIN           reduce using rule 10 (colons -> .)
    FUNCTION        reduce using rule 10 (colons -> .)
    CYCLE           reduce using rule 10 (colons -> .)
    CONTINUE        reduce using rule 10 (colons -> .)
    BREAK           reduce using rule 10 (colons -> .)
    PRINT           reduce using rule 10 (colons -> .)
    IF              reduce using rule 10 (colons -> .)
    CALL            reduce using rule 10 (colons -> .)
    VARIABLE        reduce using rule 10 (colons -> .)
    OPEN_PAREN      reduce using rule 10 (colons -> .)
    FLOAT_DIGIT     reduce using rule 10 (colons -> .)
    INT_DIGIT       reduce using rule 10 (colons -> .)
    EQUAL           reduce using rule 10 (colons -> .)
    SUM             reduce using rule 10 (colons -> .)
    MINUS           reduce using rule 10 (colons -> .)
    MULTIPLY        reduce using rule 10 (colons -> .)
    DIVISION        reduce using rule 10 (colons -> .)
    $end            reduce using rule 10 (colons -> .)
    COLON           shift and go to state 6
    SEMI_COLON      shift and go to state 7

  ! COLON           [ reduce using rule 10 (colons -> .) ]
  ! SEMI_COLON      [ reduce using rule 10 (colons -> .) ]

    colons                         shift and go to state 5

state 3

    (4) block -> vars .

    COLON           reduce using rule 4 (block -> vars .)
    SEMI_COLON      reduce using rule 4 (block -> vars .)
    BEGIN           reduce using rule 4 (block -> vars .)
    FUNCTION        reduce using rule 4 (block -> vars .)
    CYCLE           reduce using rule 4 (block -> vars .)
    CONTINUE        reduce using rule 4 (block -> vars .)
    BREAK           reduce using rule 4 (block -> vars .)
    PRINT           reduce using rule 4 (block -> vars .)
    IF              reduce using rule 4 (block -> vars .)
    CALL            reduce using rule 4 (block -> vars .)
    VARIABLE        reduce using rule 4 (block -> vars .)
    OPEN_PAREN      reduce using rule 4 (block -> vars .)
    FLOAT_DIGIT     reduce using rule 4 (block -> vars .)
    INT_DIGIT       reduce using rule 4 (block -> vars .)
    EQUAL           reduce using rule 4 (block -> vars .)
    SUM             reduce using rule 4 (block -> vars .)
    MINUS           reduce using rule 4 (block -> vars .)
    MULTIPLY        reduce using rule 4 (block -> vars .)
    DIVISION        reduce using rule 4 (block -> vars .)
    $end            reduce using rule 4 (block -> vars .)


state 4

    (6) vars -> VAR . vars variables colons types colons
    (5) vars -> .
    (6) vars -> . VAR vars variables colons types colons

    VARIABLE        reduce using rule 5 (vars -> .)
    OPEN_PAREN      reduce using rule 5 (vars -> .)
    COLON           reduce using rule 5 (vars -> .)
    SEMI_COLON      reduce using rule 5 (vars -> .)
    INTEGER_TYPE    reduce using rule 5 (vars -> .)
    FLOAT_TYPE      reduce using rule 5 (vars -> .)
    BEGIN           reduce using rule 5 (vars -> .)
    FUNCTION        reduce using rule 5 (vars -> .)
    CYCLE           reduce using rule 5 (vars -> .)
    CONTINUE        reduce using rule 5 (vars -> .)
    BREAK           reduce using rule 5 (vars -> .)
    PRINT           reduce using rule 5 (vars -> .)
    IF              reduce using rule 5 (vars -> .)
    CALL            reduce using rule 5 (vars -> .)
    FLOAT_DIGIT     reduce using rule 5 (vars -> .)
    INT_DIGIT       reduce using rule 5 (vars -> .)
    EQUAL           reduce using rule 5 (vars -> .)
    SUM             reduce using rule 5 (vars -> .)
    MINUS           reduce using rule 5 (vars -> .)
    MULTIPLY        reduce using rule 5 (vars -> .)
    DIVISION        reduce using rule 5 (vars -> .)
    $end            reduce using rule 5 (vars -> .)
    VAR             shift and go to state 4

    vars                           shift and go to state 8

state 5

    (2) program -> block colons . body
    (17) body -> .
    (18) body -> . BEGIN body lines colons END
    (19) body -> . lines colons
    (20) lines -> .
    (21) lines -> . function
    (22) lines -> . cycle
    (23) lines -> . assign
    (24) lines -> . expression
    (25) lines -> . print
    (26) lines -> . if
    (27) lines -> . call
    (30) function -> .
    (31) function -> . FUNCTION NAME_FUNCTION variables body
    (32) cycle -> .
    (33) cycle -> . CYCLE condition body
    (28) assign -> . variables EQUAL expression
    (46) expression -> .
    (47) expression -> . term SUM term
    (48) expression -> . term MINUS term
    (49) expression -> . CONTINUE
    (50) expression -> . BREAK
    (45) print -> . PRINT expression
    (34) if -> . IF condition body else body
    (29) call -> . CALL NAME_FUNCTION variables
    (13) variables -> .
    (14) variables -> . VARIABLE
    (15) variables -> . VARIABLE COMMA variables
    (16) variables -> . OPEN_PAREN variables CLOSE_PAREN
    (51) term -> .
    (52) term -> . factor MULTIPLY factor
    (53) term -> . factor DIVISION factor
    (54) factor -> .
    (55) factor -> . VARIABLE
    (56) factor -> . FLOAT_DIGIT
    (57) factor -> . INT_DIGIT
    (58) factor -> . OPEN_PAREN expression CLOSE_PAREN

  ! reduce/reduce conflict for $end resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for COLON resolved using rule 20 (lines -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 20 (lines -> .)
  ! reduce/reduce conflict for $end resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for COLON resolved using rule 20 (lines -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 20 (lines -> .)
  ! reduce/reduce conflict for $end resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for COLON resolved using rule 20 (lines -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 20 (lines -> .)
  ! reduce/reduce conflict for $end resolved using rule 17 (body -> .)
    $end            reduce using rule 17 (body -> .)
    BEGIN           shift and go to state 10
    COLON           reduce using rule 20 (lines -> .)
    SEMI_COLON      reduce using rule 20 (lines -> .)
    FUNCTION        shift and go to state 19
    CYCLE           shift and go to state 21
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    PRINT           shift and go to state 25
    IF              shift and go to state 26
    CALL            shift and go to state 27
    EQUAL           reduce using rule 13 (variables -> .)
    VARIABLE        shift and go to state 28
    OPEN_PAREN      shift and go to state 29
    SUM             reduce using rule 51 (term -> .)
    MINUS           reduce using rule 51 (term -> .)
    MULTIPLY        reduce using rule 54 (factor -> .)
    DIVISION        reduce using rule 54 (factor -> .)
    FLOAT_DIGIT     shift and go to state 31
    INT_DIGIT       shift and go to state 32

  ! $end            [ reduce using rule 20 (lines -> .) ]
  ! COLON           [ reduce using rule 30 (function -> .) ]
  ! SEMI_COLON      [ reduce using rule 30 (function -> .) ]
  ! $end            [ reduce using rule 30 (function -> .) ]
  ! COLON           [ reduce using rule 32 (cycle -> .) ]
  ! SEMI_COLON      [ reduce using rule 32 (cycle -> .) ]
  ! $end            [ reduce using rule 32 (cycle -> .) ]
  ! COLON           [ reduce using rule 46 (expression -> .) ]
  ! SEMI_COLON      [ reduce using rule 46 (expression -> .) ]
  ! $end            [ reduce using rule 46 (expression -> .) ]

    body                           shift and go to state 9
    lines                          shift and go to state 11
    function                       shift and go to state 12
    cycle                          shift and go to state 13
    assign                         shift and go to state 14
    expression                     shift and go to state 15
    print                          shift and go to state 16
    if                             shift and go to state 17
    call                           shift and go to state 18
    variables                      shift and go to state 20
    term                           shift and go to state 22
    factor                         shift and go to state 30

state 6

    (11) colons -> COLON .

    BEGIN           reduce using rule 11 (colons -> COLON .)
    FUNCTION        reduce using rule 11 (colons -> COLON .)
    CYCLE           reduce using rule 11 (colons -> COLON .)
    CONTINUE        reduce using rule 11 (colons -> COLON .)
    BREAK           reduce using rule 11 (colons -> COLON .)
    PRINT           reduce using rule 11 (colons -> COLON .)
    IF              reduce using rule 11 (colons -> COLON .)
    CALL            reduce using rule 11 (colons -> COLON .)
    VARIABLE        reduce using rule 11 (colons -> COLON .)
    OPEN_PAREN      reduce using rule 11 (colons -> COLON .)
    FLOAT_DIGIT     reduce using rule 11 (colons -> COLON .)
    INT_DIGIT       reduce using rule 11 (colons -> COLON .)
    COLON           reduce using rule 11 (colons -> COLON .)
    SEMI_COLON      reduce using rule 11 (colons -> COLON .)
    EQUAL           reduce using rule 11 (colons -> COLON .)
    SUM             reduce using rule 11 (colons -> COLON .)
    MINUS           reduce using rule 11 (colons -> COLON .)
    MULTIPLY        reduce using rule 11 (colons -> COLON .)
    DIVISION        reduce using rule 11 (colons -> COLON .)
    $end            reduce using rule 11 (colons -> COLON .)
    END             reduce using rule 11 (colons -> COLON .)
    ELSE            reduce using rule 11 (colons -> COLON .)
    INTEGER_TYPE    reduce using rule 11 (colons -> COLON .)
    FLOAT_TYPE      reduce using rule 11 (colons -> COLON .)


state 7

    (12) colons -> SEMI_COLON .

    BEGIN           reduce using rule 12 (colons -> SEMI_COLON .)
    FUNCTION        reduce using rule 12 (colons -> SEMI_COLON .)
    CYCLE           reduce using rule 12 (colons -> SEMI_COLON .)
    CONTINUE        reduce using rule 12 (colons -> SEMI_COLON .)
    BREAK           reduce using rule 12 (colons -> SEMI_COLON .)
    PRINT           reduce using rule 12 (colons -> SEMI_COLON .)
    IF              reduce using rule 12 (colons -> SEMI_COLON .)
    CALL            reduce using rule 12 (colons -> SEMI_COLON .)
    VARIABLE        reduce using rule 12 (colons -> SEMI_COLON .)
    OPEN_PAREN      reduce using rule 12 (colons -> SEMI_COLON .)
    FLOAT_DIGIT     reduce using rule 12 (colons -> SEMI_COLON .)
    INT_DIGIT       reduce using rule 12 (colons -> SEMI_COLON .)
    COLON           reduce using rule 12 (colons -> SEMI_COLON .)
    SEMI_COLON      reduce using rule 12 (colons -> SEMI_COLON .)
    EQUAL           reduce using rule 12 (colons -> SEMI_COLON .)
    SUM             reduce using rule 12 (colons -> SEMI_COLON .)
    MINUS           reduce using rule 12 (colons -> SEMI_COLON .)
    MULTIPLY        reduce using rule 12 (colons -> SEMI_COLON .)
    DIVISION        reduce using rule 12 (colons -> SEMI_COLON .)
    $end            reduce using rule 12 (colons -> SEMI_COLON .)
    END             reduce using rule 12 (colons -> SEMI_COLON .)
    ELSE            reduce using rule 12 (colons -> SEMI_COLON .)
    INTEGER_TYPE    reduce using rule 12 (colons -> SEMI_COLON .)
    FLOAT_TYPE      reduce using rule 12 (colons -> SEMI_COLON .)


state 8

    (6) vars -> VAR vars . variables colons types colons
    (13) variables -> .
    (14) variables -> . VARIABLE
    (15) variables -> . VARIABLE COMMA variables
    (16) variables -> . OPEN_PAREN variables CLOSE_PAREN

  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for OPEN_PAREN resolved as shift
    COLON           reduce using rule 13 (variables -> .)
    SEMI_COLON      reduce using rule 13 (variables -> .)
    INTEGER_TYPE    reduce using rule 13 (variables -> .)
    FLOAT_TYPE      reduce using rule 13 (variables -> .)
    BEGIN           reduce using rule 13 (variables -> .)
    FUNCTION        reduce using rule 13 (variables -> .)
    CYCLE           reduce using rule 13 (variables -> .)
    CONTINUE        reduce using rule 13 (variables -> .)
    BREAK           reduce using rule 13 (variables -> .)
    PRINT           reduce using rule 13 (variables -> .)
    IF              reduce using rule 13 (variables -> .)
    CALL            reduce using rule 13 (variables -> .)
    FLOAT_DIGIT     reduce using rule 13 (variables -> .)
    INT_DIGIT       reduce using rule 13 (variables -> .)
    EQUAL           reduce using rule 13 (variables -> .)
    SUM             reduce using rule 13 (variables -> .)
    MINUS           reduce using rule 13 (variables -> .)
    MULTIPLY        reduce using rule 13 (variables -> .)
    DIVISION        reduce using rule 13 (variables -> .)
    $end            reduce using rule 13 (variables -> .)
    VARIABLE        shift and go to state 34
    OPEN_PAREN      shift and go to state 35

  ! VARIABLE        [ reduce using rule 13 (variables -> .) ]
  ! OPEN_PAREN      [ reduce using rule 13 (variables -> .) ]

    variables                      shift and go to state 33

state 9

    (2) program -> block colons body .

    $end            reduce using rule 2 (program -> block colons body .)


state 10

    (18) body -> BEGIN . body lines colons END
    (17) body -> .
    (18) body -> . BEGIN body lines colons END
    (19) body -> . lines colons
    (20) lines -> .
    (21) lines -> . function
    (22) lines -> . cycle
    (23) lines -> . assign
    (24) lines -> . expression
    (25) lines -> . print
    (26) lines -> . if
    (27) lines -> . call
    (30) function -> .
    (31) function -> . FUNCTION NAME_FUNCTION variables body
    (32) cycle -> .
    (33) cycle -> . CYCLE condition body
    (28) assign -> . variables EQUAL expression
    (46) expression -> .
    (47) expression -> . term SUM term
    (48) expression -> . term MINUS term
    (49) expression -> . CONTINUE
    (50) expression -> . BREAK
    (45) print -> . PRINT expression
    (34) if -> . IF condition body else body
    (29) call -> . CALL NAME_FUNCTION variables
    (13) variables -> .
    (14) variables -> . VARIABLE
    (15) variables -> . VARIABLE COMMA variables
    (16) variables -> . OPEN_PAREN variables CLOSE_PAREN
    (51) term -> .
    (52) term -> . factor MULTIPLY factor
    (53) term -> . factor DIVISION factor
    (54) factor -> .
    (55) factor -> . VARIABLE
    (56) factor -> . FLOAT_DIGIT
    (57) factor -> . INT_DIGIT
    (58) factor -> . OPEN_PAREN expression CLOSE_PAREN

  ! reduce/reduce conflict for COLON resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CYCLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CONTINUE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for BREAK resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for PRINT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for IF resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CALL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for OPEN_PAREN resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for FLOAT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for INT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for END resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for EQUAL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SUM resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for DIVISION resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for COLON resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for FUNCTION resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CYCLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CONTINUE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for BREAK resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for PRINT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for IF resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CALL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for OPEN_PAREN resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for FLOAT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for INT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for END resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for EQUAL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SUM resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for DIVISION resolved using rule 17 (body -> .)
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! reduce/reduce conflict for COLON resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 17 (body -> .)
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! reduce/reduce conflict for CYCLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CONTINUE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for BREAK resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for PRINT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for IF resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CALL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for OPEN_PAREN resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for FLOAT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for INT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for END resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for EQUAL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SUM resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for DIVISION resolved using rule 17 (body -> .)
  ! shift/reduce conflict for CYCLE resolved as shift
  ! reduce/reduce conflict for COLON resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SEMI_COLON resolved using rule 17 (body -> .)
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for CYCLE resolved as shift
  ! reduce/reduce conflict for CONTINUE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for BREAK resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for PRINT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for IF resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for CALL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for VARIABLE resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for OPEN_PAREN resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for FLOAT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for INT_DIGIT resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for END resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for EQUAL resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for SUM resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for DIVISION resolved using rule 17 (body -> .)
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! reduce/reduce conflict for EQUAL resolved using rule 13 (variables -> .)
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for OPEN_PAREN resolved as shift
  ! reduce/reduce conflict for SUM resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for MULTIPLY resolved using rule 17 (body -> .)
  ! reduce/reduce conflict for DIVISION resolved using rule 17 (body -> .)
  ! shift/reduce conflict for FLOAT_DIGIT resolved as shift
  ! shift/reduce conflict for INT_DIGIT resolved as shift
    COLON           reduce using rule 17 (body -> .)
    SEMI_COLON      reduce using rule 17 (body -> .)
    END             reduce using rule 17 (body -> .)
    SUM             reduce using rule 17 (body -> .)
    MINUS           reduce using rule 17 (body -> .)
    MULTIPLY        reduce using rule 17 (body -> .)
    DIVISION        reduce using rule 17 (body -> .)
    BEGIN           shift and go to state 10
    FUNCTION        shift and go to state 19
    CYCLE           shift and go to state 21
    CONTINUE        shift and go to state 23
    BREAK           shift and go to state 24
    PRINT           shift and go to state 25
    IF              shift and go to state 26
    CALL            shift and go to state 27
    EQUAL           reduce using rule 13 (variables -> .)
    VARIABLE        shift and go to state 28
    OPEN_PAREN      shift and go to state 29
    FLOAT_DIGIT     shift and go to state 31
    INT_DIGIT       shift and go to state 32
